module(
    name = "com_google_robotstxt",
    version = "head",
)

# -- bazel_dep definitions -- #
bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.2",
)

bazel_dep(
    name = "googletest",
    version = "1.14.0.bcr.1",
)

bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
