module(
    name = "com_google_robotstxt",
    version = "head",
)

# -- bazel_dep definitions -- #
bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20260107.1",
)

bazel_dep(
    name = "googletest",
    version = "1.17.0.bcr.2",
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.17",
)

bazel_dep(
    name = "emsdk",
    version = "5.0.4",
)
